Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -47,24 +47,18 @@
 Node $v$ is important if **Surrounded by important neighboring nodes** $u ∈ N(v)$.
 
 Eigenvector centrality of node $v$ is **the sum of the centrality of nighboring nodes**.
-$$
-c_v = \frac1𝛌 \sum_{u∈N(v)}c_u
+$$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u
 \\
 \\
-\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}
-$$
+\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$$
 We can write (1) into recursive equation in matrix form
-$$
-\lambda c\ =\ Ac \label{eq1}
-$$
+$$\lambda c\ =\ Ac \label{eq1}$$
 
-$$
-\begin{align*}
+$$\begin{align*}
 \text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\
 c : \text{Centrality vector}\\ 
 \lambda: \text{Eigenvalue}
-\end{align*}
-$$
+\end{align*}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
