--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -47,10 +47,9 @@
 Node $v$ is important if **Surrounded by important neighboring nodes** $u ∈ N(v)$.
 
 Eigenvector centrality of node $v$ is **the sum of the centrality of nighboring nodes**.
-$$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u
-\\
-\\
-\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$$
+$$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u$$
+
+$$\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$$
 We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
