Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -53,7 +53,7 @@ $$\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$
 We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
-$$\begin{align*}\\\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}\end{align*}$$
+$$\begin{align*}\\\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\ c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}\end{align*}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
@@ -63,7 +63,7 @@ the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centralit
 #### Betweeness centrality
 
 Node $v$ is important **if it lies on many shortest paths between other nodes**
-$$\begin{equation}c_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}\tag{1}\end{equation}$$
+$$c_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}\tag{1}$$
 
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132007851.png" alt="image-20230102132007851" style="zoom:35%;" />
@@ -75,7 +75,7 @@ $$\begin{equation}c_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht be
 #### Closeness centrality
 
 A node is important **if it has small shortest pathe length to all other nodes**.
-$$\begin{equation}\tag{1}c_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}\end{equation}$$
+$$\tag{1}c_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}$$
 The more central the node is, the more close to other nodes. Which means it is more important!
 
 
