Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -47,22 +47,12 @@
 Node $v$ is important if **Surrounded by important neighboring nodes** $u ∈ N(v)$.
 
 Eigenvector centrality of node $v$ is **the sum of the centrality of nighboring nodes**.
-$$
-c_v = \frac1𝛌 \sum_{u∈N(v)}c_u
-\\
-\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}
-$$
-We can write (1) into recursive equation in matrix form
-$$
-\lambda c\ =\ Ac \label{eq1}
-$$
+$$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u\\ \text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$$
 
-$$
-\notag
-\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\
-c : \text{Centrality vector}\\ 
-\lambda: \text{Eigenvalue}
-$$
+We can write (1) into recursive equation in matrix form
+$$\lambda c\ =\ Ac \label{eq1}$$
+
+$$\notag\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\ c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
@@ -72,10 +62,7 @@ the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centralit
 #### Betweeness centrality
 
 Node $v$ is important **if it lies on many shortest paths between other nodes**
-$$
-\notag
-c_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}
-$$
+$$\notagc_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}$$
 
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132007851.png" alt="image-20230102132007851" style="zoom:35%;" />
@@ -87,10 +74,7 @@ $$
 #### Closeness centrality
 
 A node is important **if it has small shortest pathe length to all other nodes**.
-$$
-\notag
-c_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}
-$$
+$$\notagc_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}$$
 The more central the node is, the more close to other nodes. Which means it is more important!
 
 
@@ -104,10 +88,7 @@ The more central the node is, the more close to other nodes. Which means it is m
 ### Clustering Coefficient
 
 It measures how connected $v$'s neighboring nodes are 
-$$
-\notag
-e_v = \frac{\#\text{ of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]
-$$
+$$\notage_v = \frac{\#\text{ of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]$$
 Result of (1), $e_v$ is bounded between 0 and 1.
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132909808.png" alt="image-20230102132909808" style="zoom:45%;" />
