Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -62,7 +62,7 @@ the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centralit
 #### Betweeness centrality
 
 Node $v$ is important **if it lies on many shortest paths between other nodes**
-$$\notagc_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}$$
+$$\notagc_v = \sum_{s\neq v \neq t}\frac{\text{number of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}$$
 
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132007851.png" alt="image-20230102132007851" style="zoom:35%;" />
@@ -88,7 +88,7 @@ The more central the node is, the more close to other nodes. Which means it is m
 ### Clustering Coefficient
 
 It measures how connected $v$'s neighboring nodes are 
-$$\notage_v = \frac{\#\text{ of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]$$
+$$\notage_v = \frac{\text{number of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]$$
 Result of (1), $e_v$ is bounded between 0 and 1.
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132909808.png" alt="image-20230102132909808" style="zoom:45%;" />
