Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -52,7 +52,7 @@ $$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u\\ \text{𝛌 is\ normalization\ constant,\
 We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
-$$\notag\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\ c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}$$
+$$\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\ c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
@@ -62,7 +62,7 @@ the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centralit
 #### Betweeness centrality
 
 Node $v$ is important **if it lies on many shortest paths between other nodes**
-$$\notagc_v = \sum_{s\neq v \neq t}\frac{\text{number of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}$$
+$$c_v = \sum_{s\neq v \neq t}\frac{\text{number of shortest paht between s and t that contains v}}{\text{number of shortest paths between s and t}}$$
 
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132007851.png" alt="image-20230102132007851" style="zoom:35%;" />
@@ -74,7 +74,7 @@ $$\notagc_v = \sum_{s\neq v \neq t}\frac{\text{number of shortest paht between s
 #### Closeness centrality
 
 A node is important **if it has small shortest pathe length to all other nodes**.
-$$\notagc_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}$$
+$$c_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}$$
 The more central the node is, the more close to other nodes. Which means it is more important!
 
 
@@ -88,7 +88,7 @@ The more central the node is, the more close to other nodes. Which means it is m
 ### Clustering Coefficient
 
 It measures how connected $v$'s neighboring nodes are 
-$$\notage_v = \frac{\text{number of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]$$
+$$e_v = \frac{\text{number of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]$$
 Result of (1), $e_v$ is bounded between 0 and 1.
 
 <img src="/Users/jojuhyeon/Library/Application Support/typora-user-images/image-20230102132909808.png" alt="image-20230102132909808" style="zoom:45%;" />
