update math equations

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -47,22 +47,11 @@
 Node $v$ is important if **Surrounded by important neighboring nodes** $u ∈ N(v)$.
 
 Eigenvector centrality of node $v$ is **the sum of the centrality of nighboring nodes**.
-$$
-c_v = \frac1𝛌 \sum_{u∈N(v)}c_u
-\\
-\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}
-$$
+$$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u\\ \text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$$
 We can write (1) into recursive equation in matrix form
-$$
-\lambda c\ =\ Ac \label{eq1}
-$$
+$$\lambda c\ =\ Ac \label{eq1}$$
 
-$$
-\notag
-\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\
-c : \text{Centrality vector}\\ 
-\lambda: \text{Eigenvalue}
-$$
+$$\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\ c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
@@ -72,10 +61,7 @@ the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centralit
 #### Betweeness centrality
 
 Node $v$ is important **if it lies on many shortest paths between other nodes**
-$$
-\notag
-c_v = \sum_{s\neq v \neq t}\frac{\# \text{ of shortest paht between s and t that contains v}}{\# \text{ of shortest paths between s and t}}
-$$
+$$c_v = \sum_{s\neq v \neq t}\frac{text{number of shortest paht between s and t that contains v}}{\text{number of shortest paths between s and t}}$$
 
 <img width="636" alt="BTW cnetrality" src="https://user-images.githubusercontent.com/84625523/210504271-46bc980c-2584-4734-86a5-353bdef92e0c.png">
 
@@ -86,10 +72,7 @@ $$
 #### Closeness centrality
 
 A node is important **if it has small shortest pathe length to all other nodes**.
-$$
-\notag
-c_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}
-$$
+$$c_v = \frac{1}{\sum_{u\neq v}\text{ shortest path length between u and v}}$$
 The more central the node is, the more close to other nodes. Which means it is more important!
 
 
@@ -103,11 +86,8 @@ The more central the node is, the more close to other nodes. Which means it is m
 ### Clustering Coefficient
 
 It measures how connected $v$'s neighboring nodes are 
-$$
-\notag
-e_v = \frac{\#\text{ of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]
-$$
-Result of (1), $e_v$ is bounded between 0 and 1.
+$$e_v = \frac{\text{number of edges among neighboring nodes}}{k_v\choose2} \in [0, 1]$$
+Result of equation, $e_v$ is bounded between 0 and 1.
 
 <img width="652" alt="clustering coeeficient" src="https://user-images.githubusercontent.com/84625523/210504351-91d0201b-63a4-401a-ba33-f43416370113.png">
 
