--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -51,7 +51,10 @@ $$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u\\ \text{𝛌 is\ normalization\ constant,\
 We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
-$$\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\ c : \text{Centrality vector}\\ \lambda: \text{Eigenvalue}$$
+$$\text{A : Adjecency matrix,}\\
+A_{uv} = 1\ if\ u\in N(v)\\ 
+c : \text{Centrality vector}\\ 
+\lambda: \text{Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
