--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -51,10 +51,10 @@ $$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u\\ \text{𝛌 is\ normalization\ constant,\
 We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
-$$\text{A : Adjecency matrix,}\\
-A_{uv} = 1\ if\ u\in N(v)\\ 
-c : \text{Centrality vector}\\ 
-\lambda: \text{Eigenvalue}$$
+$$\text{A : Adjecency matrix}$$
+$$A_{uv} = 1\ if\ u\in N(v)$$
+$$c : \text{Centrality vector}$$
+$$\lambda: \text{Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
@@ -64,7 +64,7 @@ the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centralit
 #### Betweeness centrality
 
 Node $v$ is important **if it lies on many shortest paths between other nodes**
-$$c_v = \sum_{s\neq v \neq t}\frac{text{number of shortest paht between s and t that contains v}}{\text{number of shortest paths between s and t}}$$
+$$c_v = \sum_{s\neq v \neq t}\frac{\text{number of shortest paht between s and t that contains v}}{\text{number of shortest paths between s and t}}$$
 
 <img width="636" alt="BTW cnetrality" src="https://user-images.githubusercontent.com/84625523/210504271-46bc980c-2584-4734-86a5-353bdef92e0c.png">
 
