Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -51,10 +51,10 @@ $$c_v = \frac1𝛌 \sum_{u∈N(v)}c_u\\ \text{𝛌 is\ normalization\ constant,\
 We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
-$$\text{A : Adjecency matrix}$$
-$$A_{uv} = 1\ if\ u\in N(v)$$
-$$c : \text{Centrality vector}$$
-$$\lambda: \text{Eigenvalue}$$
+$$\text{A : Adjecency matrix}\\ 
+A_{uv} = 1\ if\ u \in N(v)\\ 
+c : \text{Centrality vector}\\ 
+\lambda: \text{Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
 the eigenvector $c_{max}$ corresponding to $\lambda_{max}$ is used for centrality.
@@ -126,7 +126,8 @@ We use graph above to explain concept of induced subgraph. If we were to find in
 
 
 Two graphs which contain the same number of nodes connected in the same way are to said to be **Isomorphic**. For example, two graph below is isomorphic.
-<img width="197" alt="iso" src="https://user-images.githubusercontent.com/84625523/210504594-bffb9c37-e491-403f-88b3-fb12147690eb.png" style="zoom:180%;" > 
+
+<img width="197" alt="iso" src="https://user-images.githubusercontent.com/84625523/210504594-bffb9c37-e491-403f-88b3-fb12147690eb.png" style="zoom:250%;" > 
 
 Node mapping of two graphs is (e2, c2), (e1, c5), (e5, c3), (e4, c1), (e3, c4) and (e2, c2) again. However below are not isomorphic i.e. Non-Isomorphic.
 
