Update 2.Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2.Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2.Traditional Graph Machine learning Tasks.md
@@ -52,8 +52,11 @@ We can write (1) into recursive equation in matrix form
 $$\lambda c\ =\ Ac \label{eq1}$$
 
 $$\text{A : Adjecency matrix}$$
+
 $$A_{uv} = 1\ \text{ if } u \in N(v)$$
+
 $$c : \text{Centrality vector}$$
+
 $$\lambda: \text{ Eigenvalue}$$
 
 We see that EC $c$ is the eigenvector of $A$, and largest eigenvalue $\lambda_{max}$ is always positive and unique.
@@ -138,9 +141,11 @@ Right graph has cycle of length 3, but not in left one. So the graphs cannot be 
 
 
 So back to **graphlets**, the definition is **rooted connected induced non-isomorphic subgraphs**. Rooted means that for each nodes, they have fixed position. I mentioned before with 2 - 3 nodes, there is 73 different graphlets, and below there are all graphlets that comes out of it.
+
 <img src="https://user-images.githubusercontent.com/84625523/210504771-e8703043-de97-4e91-b8a3-493c8d3170a5.png" alt="image" style="zoom:70%;" />
 
-As you can see there is position number for each nodes, which is rooted.<img width="186" alt="induced_1" src="https://user-images.githubusercontent.com/84625523/210504460-3e5f6637-666b-4d47-b6ca-56d1906ffd5b.png" style="zoom:150%;" >
+As you can see there is position number for each nodes, which is rooted.
+<img width="186" alt="induced_1" src="https://user-images.githubusercontent.com/84625523/210504460-3e5f6637-666b-4d47-b6ca-56d1906ffd5b.png" style="zoom:150%;" >
 
 So for this graph, graphlet of node $u$ has graphlet of 0, 1, 2, 3, 5, 10... and so for.
 
