Update 2. Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2. Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2. Traditional Graph Machine learning Tasks.md
@@ -54,7 +54,7 @@ $$\text{𝛌 is\ normalization\ constant,\ also\ a\ largest\ eigenvalue\ of\ A}$
 
 We can write (1) into recursive equation in matrix form
 
-$$\lambda c\ =\ Ac \label{eq1}$$
+$$\lambda c\ =\ Ac$$
 
 $$\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\$$
 
@@ -123,6 +123,7 @@ To understand how graphlets are produced, we need to know 2 concept about graph.
 
 
 **Induced Subgraph** is another graph, formed from a subset of vertices and *all* of the edges connecting the vertices in that subset.
+
 <img width="186" alt="induced_1" src="https://user-images.githubusercontent.com/84625523/210504460-3e5f6637-666b-4d47-b6ca-56d1906ffd5b.png"> 
 
 We use graph above to explain concept of induced subgraph. If we were to find induced subgraph of vertice $u, B$ and $C$,  induced subgraph will be graph that contains 3 vertices, $u, B$ and $C$ with 3 edges connecting them, so to say as figure below.
@@ -132,21 +133,23 @@ We use graph above to explain concept of induced subgraph. If we were to find in
 
 
 Two graphs which contain the same number of nodes connected in the same way are to said to be **Isomorphic**. For example, two graph below is isomorphic.
-<img width="197" alt="iso" src="https://user-images.githubusercontent.com/84625523/210504594-bffb9c37-e491-403f-88b3-fb12147690eb.png" style="zoom:180%;" > 
 
+<img width="197" alt="iso" src="https://user-images.githubusercontent.com/84625523/210504594-bffb9c37-e491-403f-88b3-fb12147690eb.png" style="zoom:350%;" > 
 Node mapping of two graphs is (e2, c2), (e1, c5), (e5, c3), (e4, c1), (e3, c4) and (e2, c2) again. However below are not isomorphic i.e. Non-Isomorphic.
 
-<img width="262" alt="image" src="https://user-images.githubusercontent.com/84625523/210504670-fe9c84bc-1e82-4567-badc-cca5aa890796.png" style="zoom:150%;" > 
 
+
+<img width="262" alt="image" src="https://user-images.githubusercontent.com/84625523/210504670-fe9c84bc-1e82-4567-badc-cca5aa890796.png" style="zoom:150%;" > 
 Right graph has cycle of length 3, but not in left one. So the graphs cannot be isomorphic
 
 
 
 So back to **graphlets**, the definition is **rooted connected induced non-isomorphic subgraphs**. Rooted means that for each nodes, they have fixed position. I mentioned before with 2 - 3 nodes, there is 73 different graphlets, and below there are all graphlets that comes out of it.
+
 <img src="https://user-images.githubusercontent.com/84625523/210504771-e8703043-de97-4e91-b8a3-493c8d3170a5.png" alt="image" style="zoom:70%;" />
+As you can see there is position number for each nodes, which is rooted.
 
-As you can see there is position number for each nodes, which is rooted.<img width="186" alt="induced_1" src="https://user-images.githubusercontent.com/84625523/210504460-3e5f6637-666b-4d47-b6ca-56d1906ffd5b.png" style="zoom:150%;" >
-
+<img width="186" alt="induced_1" src="https://user-images.githubusercontent.com/84625523/210504460-3e5f6637-666b-4d47-b6ca-56d1906ffd5b.png" style="zoom:150%;" >
 So for this graph, graphlet of node $u$ has graphlet of 0, 1, 2, 3, 5, 10... and so for.
 
 Now we can use this graphlet count as **Graphlet Degree Vector(GDV)**, a count vector of graphlet rooted at given node. Example fallows,
@@ -247,18 +250,18 @@ $$\sum_{u\in N(v_1)\cup N(v_2)}\frac{1}{log(k_u)}$$
 
 **Show $P^{(K)} = A^K$**
 
-1. $A_uv = 1 \text{ if } u \in N(v)$
+1. $A_{uv} = 1 \text{ if } u \in N(v)$
 
 2. Let $P^{(K)}_{uv} = \text{number of walks of lenth K between } u \text{ and } v$
 
-3. $P^{(1)}_{uv} = (\text{number of walks of lenth 1 between } u \text{ and } v) = A_{uv}$
+3. So, $P^{(1)}_{uv} = (\text{number of walks of lenth 1 between } u \text{ and } v) = A_{uv}$
 
 4. Compute $P^{(2)}_{uv}$
 
    1. Compute #walks of length 1, between each $u$'s neighbor and $v$
    2. Sum up these #walks across $u$'s neighbors
 
-   \>  $P^{(2)}_{uv} = \sum_i{A_{u_i} \times P^{(1)}_{iv}} = \sum_i A_{ui} \times A_{iv} = A^2_{uv}$
+   $P^{(2)}_{uv} = \sum_i{A_{u_i} \times P^{(1)}_{iv}} = \sum_i A_{ui} \times A_{iv} = A^2_{uv}$
 
 
 
@@ -358,7 +361,7 @@ Key Idea here is to count the number of different graphlet in a graph.
 
 #### So, Calculate
 
-Given graph $G$, and a graphlet list $\mathcal{G}_k = (g_1, g_2, ... , g_{n_k}) $, define the graphlet count vector $f_G \in \R^{n_k}$ as
+Given graph $G$, and a graphlet list $\mathcal{G}_k = (g_1, g_2, ... , g_{n_k})$, define the graphlet count vector $f_G \in \R^{n_k}$ as
 $$(f_G)_i = \text{number of }(g_i \subseteq G) \text{ for } i = 1, 2, 3, \ldots,n_k$$
 
 
