Update 2. Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2. Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2. Traditional Graph Machine learning Tasks.md
@@ -56,7 +56,7 @@ We can write (1) into recursive equation in matrix form
 
 $$\lambda c\ =\ Ac$$
 
-$$\text{A : Adjecency matrix,}\ \ A_{uv} = 1\ if\ u\in N(v)\\$$
+$$\text{A : Adjecency matrix,  }A_{uv} = 1\text{  }if\text{  } u \in N(v)$$
 
 $$c : \text{Centrality vector}$$
 
@@ -134,6 +134,7 @@ We use graph above to explain concept of induced subgraph. If we were to find in
 
 Two graphs which contain the same number of nodes connected in the same way are to said to be **Isomorphic**. For example, two graph below is isomorphic.
 
+
 <img width="197" alt="iso" src="https://user-images.githubusercontent.com/84625523/210504594-bffb9c37-e491-403f-88b3-fb12147690eb.png" style="zoom:350%;" > 
 Node mapping of two graphs is (e2, c2), (e1, c5), (e5, c3), (e4, c1), (e3, c4) and (e2, c2) again. However below are not isomorphic i.e. Non-Isomorphic.
 
@@ -146,15 +147,18 @@ Right graph has cycle of length 3, but not in left one. So the graphs cannot be 
 
 So back to **graphlets**, the definition is **rooted connected induced non-isomorphic subgraphs**. Rooted means that for each nodes, they have fixed position. I mentioned before with 2 - 3 nodes, there is 73 different graphlets, and below there are all graphlets that comes out of it.
 
+
 <img src="https://user-images.githubusercontent.com/84625523/210504771-e8703043-de97-4e91-b8a3-493c8d3170a5.png" alt="image" style="zoom:70%;" />
 As you can see there is position number for each nodes, which is rooted.
 
+
 <img width="186" alt="induced_1" src="https://user-images.githubusercontent.com/84625523/210504460-3e5f6637-666b-4d47-b6ca-56d1906ffd5b.png" style="zoom:150%;" >
+
 So for this graph, graphlet of node $u$ has graphlet of 0, 1, 2, 3, 5, 10... and so for.
 
 Now we can use this graphlet count as **Graphlet Degree Vector(GDV)**, a count vector of graphlet rooted at given node. Example fallows,
 
-<img width="841" alt="image" src="https://user-images.githubusercontent.com/84625523/210504902-ebe8f9ff-1b94-4ea5-bdaa-1e0666788808.png">
+<img width="841" alt="image" src="https://user-images.githubusercontent.com/84625523/210504902-ebe8f9ff-1b94-4ea5-bdaa-1e0666788808.png style="zoom:80%;">
 
 
 
@@ -261,7 +265,7 @@ $$\sum_{u\in N(v_1)\cup N(v_2)}\frac{1}{log(k_u)}$$
    1. Compute #walks of length 1, between each $u$'s neighbor and $v$
    2. Sum up these #walks across $u$'s neighbors
 
-   $P^{(2)}_{uv} = \sum_i{A_{u_i} \times P^{(1)}_{iv}} = \sum_i A_{ui} \times A_{iv} = A^2_{uv}$
+As a result: $P^{(2)}_{uv} = \sum_i{ A_{u_i} \times P^{(1)}_{iv} } = \sum_i{A_{ui} \times A_{iv}} = A^2_{uv}$
 
 
 
