Update 2. Traditional Graph Machine learning Tasks.md

--- a/lecture_note/2. Traditional Graph Machine learning Tasks.md
+++ b/lecture_note/2. Traditional Graph Machine learning Tasks.md
@@ -258,14 +258,14 @@ $$\sum_{u\in N(v_1)\cup N(v_2)}\frac{1}{log(k_u)}$$
 
 2. Let $P^{(K)}_{uv} = \text{number of walks of lenth K between } u \text{ and } v$
 
-3. So, $P^{(1)}_{uv} = \text{number of walks of lenth 1 between } u \text{ and } v = A_{uv}$
+3. So, $P^{(1)}{uv} = \text{number of walks of lenth 1 between } u \text{ and } v = A{uv}$
 
 4. Compute $P^{(2)}_{uv}$
 
    1. Compute #walks of length 1, between each $u$'s neighbor and $v$
    2. Sum up these #walks across $u$'s neighbors
 
-As a result: $P^{(2)}_{uv} = \sum_{i}{ A_{u_i} \times P^{(1)}_{iv} } = \sum_{i}{A_{ui} \times A_{iv}} = A^2_{uv}$
+As a result: $P^{(2)}{uv} = \sum{i}{ A_{u_i} \times P^{(1)}{iv} } = \sum{i}{A_{ui} \times A_{iv}} = A^2_{uv}$
 
 
 
