Update 3. Node embedding.md
Few Typo..

--- a/lecture_note/3. Node embedding.md
+++ b/lecture_note/3. Node embedding.md
@@ -3,7 +3,7 @@
 
 
 * Goal : Efficient task-independent feature learning for machine learning with graph.
-  * Function $f$ that makes feature vector out of graph : $f : u \rightarrow \R^d$
+  * Function $f$ that makes feature vector out of graph : $f : u \rightarrow \mathbb{R}^d$
 
 
 
@@ -201,7 +201,7 @@
 ### Random walk optimization
 
 * Given $G = (V, E)$
-* Goal : Find function $f : u \rightarrow \R^d$ : $f(u) = z_u$
+* Goal : Find function $f : u \rightarrow \mathbb{R}^d$ : $f(u) = z_u$
 * Log-likelihood objective:
 
 
@@ -578,8 +578,9 @@ $$
 $$
 \text{Objective : }\max_{z_i, z_G}\frac{1}{T}\sum^T_{t = \Delta}\log P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G)
 \\
-
+\\
 P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G) = \frac{\exp(y(w_t))}{\sum_{i=1}^\eta \exp(y(w_i))}
+\\
 \\
 y(w_t) = b + U \cdot(cat(\frac1\Delta \sum^\Delta_{i=1} z_i, z_G))
 $$
