Update 3. Node embedding.md
equation fix

--- a/lecture_note/3. Node embedding.md
+++ b/lecture_note/3. Node embedding.md
@@ -561,10 +561,11 @@ $$
 
 $$
 \max_{z_G} \sum^T_{t=\Delta+1}\log P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G)
-\\
-\\
-\text{Where $T$ is the total number of walks}
 $$
+
+
+* Where $T$ is the total number of walks
+
 
 
 
@@ -578,9 +579,13 @@ $$
 $$
 \text{Objective : }\max_{z_i, z_G}\frac{1}{T}\sum^T_{t = \Delta}\log P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G)
 $$
+
+
 $$
 P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G) = \frac{\exp(y(w_t))}{\sum_{i=1}^\eta \exp(y(w_i))}
 $$
+
+
 $$
 y(w_t) = b + U \cdot(cat(\frac1\Delta \sum^\Delta_{i=1} z_i, z_G))
 $$
