Update 3. Node embedding.md
Equation fix

--- a/lecture_note/3. Node embedding.md
+++ b/lecture_note/3. Node embedding.md
@@ -582,16 +582,16 @@ $$
 
 
 $$
-P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G) = \frac{\exp(y(w_t))}{\sum_{i=1}^\eta \exp(y(w_i))}
+P(w_t \vert w_{t-\Delta}, w_{t-\Delta-1},\ ...\ w_{t-1},\  z_G) = \frac{\exp(y(w_t))}{\sum_{i=1}^{\eta} \exp(y(w_i))}
 $$
 
 
 $$
-y(w_t) = b + U \cdot(cat(\frac1\Delta \sum^\Delta_{i=1} z_i, z_G))
+y(w_t) = b + U \cdot(cat(\frac1\Delta \sum^{\Delta}_{i=1} z_i, z_G))
 $$
 
 
-* $cat(\frac1\Delta \sum^\Delta_{i=1} z_i, z_G))$ means an average of anonymous walk embeddings in $z_i$ in the window, concatenated with the graph embedding $z_G$.
+* $cat(\frac{1}{\Delta} \sum^{\Delta}_{i=1} z_i, z_G))$ means an average of anonymous walk embeddings in $z_i$ in the window, concatenated with the graph embedding $z_G$.
 * $b \in \mathbb{U}$, $U \in \mathbb{R}^D$ are learnable parameters.
   * This represent a linear layer.
 
